--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -34,7 +34,7 @@
 		<img src="images/content_img2.jpg" alt="Картинка" class="float-right" />
 		<p>Здравствуйте! Мы рады приветствовать вас на сайте фирменной кофейни <em>Mistesh Coffee</em>! Мы предлагаем нашим клиентам только самые вкусные и ароматные сорта кофе по всего мира!</p>
 		<p>Только у нас вы сможете окунуться в невероятную атмосферу кофейных плантаций Индии и Бразилии. Но не волнуйтесь - вкусный и ароматный кофе не всегда значит дорогой и горький кофе!</p>
-		<p>Если вам хочется как-то провести время, вы можете посетить нашу кофейню в одиночку для чтения или же в компании для уютных бесед за чашкой кофе.</p>
+		<p>Если вам хочется как-то провести время, вы можете посетить нашу кофейню в одиночку для чтения или же в компании для милых бесед за чашкой кофе.</p>
 	</section>
 
 	<footer>
